--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-player": "^2.14.1",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "vercel": "^33.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
